Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(HasRevenueSchedule, NULL, (ListPrice-UnitPrice) / ListPrice)</formula>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>PricebookEntry.Product2.Product_Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>BDG_EXC_PRDRULE_1</fullName>
        <active>true</active>
        <description>If Opportunity is closed, dont allow opportunity products to be modified</description>
        <errorConditionFormula>AND (

($Profile.Name &lt;&gt; &quot;System Administrator&quot;),

( ISPICKVAL(Opportunity.StageName,&quot;Closed Won&quot;)
   ||
  ISPICKVAL(Opportunity.StageName,&quot;Closed Lost&quot;)
),

(
ISCHANGED(Description) || ISCHANGED (Quantity) || ISCHANGED (UnitPrice) || ISCHANGED (ServiceDate)

)

)</errorConditionFormula>
        <errorMessage>Opportunity Product line items cannot be edited as the related opportunity is already closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BDG_EXC_PRDRULE_1a</fullName>
        <active>false</active>
        <description>If Opportunity is closed, dont allow opportunity products to be modified</description>
        <errorConditionFormula>AND (

($Profile.Name &lt;&gt; &quot;System Administrator&quot;),

( ISPICKVAL(Opportunity.StageName,&quot;Closed Won&quot;)
   ||
  ISPICKVAL(Opportunity.StageName,&quot;Closed Lost&quot;)
)
)</errorConditionFormula>
        <errorMessage>Opportunity Product line items cannot be edited as the related opportunity is already closed.</errorMessage>
    </validationRules>
</CustomObject>